--- a/pm-proj010/index.html
+++ b/pm-proj010/index.html
@@ -17,7 +17,7 @@
             <img src="img/Wescley.png">
             <h1>Wescley Farias</h1>
             <h2>Aluno do Placode Marks </h2>
-            <a href="C:\Users\Cliente\Desktop\pm-projetos\pm-proj004\index.html" class="button is-success  is-mediun ">Portfólio</a>
+            <a href="..\pm-proj004\index.html" class="button is-success  is-mediun ">Portfólio</a>
             
             <ul class="redes">
                 <li><a href="https://github.com/Wescleyfarias"><i class="fa fa-github" aria-hidden="true"></i></a></li>
