--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Projetos</title>
     </head>
     <body>
-        <h1><a href="pm-proj004/index.html">Projetos</a></h1>
+        <h1><a href="../pm-proj004/index.html">Projetos</a></h1>
     </body>
 </html>
