--- a/pm-proj001/index.html
+++ b/pm-proj001/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Oscar 2017</title>
     <link rel="stylesheet" href="estilo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>Oscar 2017</h1>
